force-app/main/default/objects/Form_Question__c/fields/Plain_Text_Output__c.field-meta.xml
<CustomField>
    <fullName>Plain_Text_Output__c</fullName>
    <label>Plain Text Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>