force-app/main/default/objects/Form_Question__c/fields/Rich_Text_Output__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Output__c</fullName>
    <label>Rich Text Output</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>