force-app/main/default/objects/Form_Question__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Heading - Large</fullName>
            </value>
            <value>
                <fullName>Heading - Medium</fullName>
            </value>
            <value>
                <fullName>Heading - Small</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Rich Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>